--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.10.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
