--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "nodemailer": "^6.9.16",
+    "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.15.0",
     "redis": "^4.7.0",
     "sweetalert2": "^11.15.3"
   },
