--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@types/sweetalert": "^2.0.4",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
