--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
     "react-loader-spinner": "^6.1.6",
     "react-spinners": "^0.15.0",
