--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@types/sweetalert": "^2.0.4",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -25,6 +26,7 @@
     "mongoose": "^8.9.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
     "react-loader-spinner": "^6.1.6",
@@ -35,6 +37,7 @@
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^0.0.42",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
