--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@types/aws-sdk": "^0.0.42",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
@@ -50,13 +51,15 @@
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.3",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "globals": "^15.14.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.21.0",
     "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
