--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clean-architecture-api",
+  "name": "@expense-tracker/api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -34,6 +34,7 @@
     "react-spinners": "^0.15.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
     "sweetalert2": "^11.15.10",
     "tsyringe": "^4.8.0"
   },
@@ -50,6 +51,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
+    "@types/socket.io": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "eslint": "^9.18.0",
