--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
+    "stripe": "^17.6.0",
     "sweetalert2": "^11.15.10",
     "tsyringe": "^4.8.0"
   },
