--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.17.1",
@@ -50,6 +51,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/date-fns": "^2.5.3",
     "@types/express": "^4.17.13",
     "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.7",
