--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-spinners": "^0.15.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "rotating-file-stream": "^3.2.6",
     "socket.io": "^4.8.1",
     "stripe": "^17.6.0",
     "sweetalert2": "^11.15.10",
